--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -5,8 +5,17 @@
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
         <meta name="description" content="Rock Paper Scissors Game">
+        <link rel="stylesheet" href="styles.css">
+        <script src="rps.js"></script>
     </head>
     <body>     
-        <script src="rps.js"></script>
+        <h1>This is a game</h1>
+        <table>
+            <tr>
+                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Rock">ROCK</button></td>
+                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Paper">PAPER</button></td>
+                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Scissors">SCISSORS</button></td>
+            </tr>
+        </table>
     </body>
 </html>
