--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -12,11 +12,13 @@
         <h1>This is a game</h1>
         <div id="btnsDiv"><table>
             <tr>
-                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Rock">ROCK</button></td>
-                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Paper">PAPER</button></td>
-                <td><button onclick="playRound(this.id, computerSelection)" type="button" id="Scissors">SCISSORS</button></td>
+                <td><button onclick="playGame(this.id)" type="button" id="Rock">ROCK</button></td>
+                <td><button onclick="playGame(this.id)" type="button" id="Paper">PAPER</button></td>
+                <td><button onclick="playGame(this.id)" type="button" id="Scissors">SCISSORS</button></td>
             </tr>
         </table></div>
+        <div id="gameStatus"></div>
+        <script>document.getElementById("gameStatus").innerText = gameResult</script>
         <div id="resultsText"></div>
         <div id="scoreDiv">
             <p>Computer Score: <span id="compScoreText"></span></p>
