Add game status and game over messages

--- a/RockPaperScissors.html
+++ b/RockPaperScissors.html
@@ -23,6 +23,7 @@
         <div id="resultsDiv">
             <p id="gameStatus"></p>
             <script>document.getElementById("gameStatus").innerText = gameResult</script>
+            <p id="selectionText"><span id="playerText"></span> -- <span id="computerText"></span></p>
             <p id="resultsText"></p>
         </div>
         <div id="scoreDiv">
